Compiladores-py/Compiladores-main/CompiladorParser.py
# Generated from ./Compilador.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CompiladorParser ( Parser ):

    grammarFileName = "Compilador.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'='", "'('", "')'", "'+'", 
                     "'-'", "'*'", "'/'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'{'", "'}'", "'begin'", "'end'", "'int'", 
                     "'float'", "'string'", "'input'", "'output'", "'if'", 
                     "'then'", "'else'", "'endif'", "'while'", "'do'", "'endwhile'", 
                     "'for'", "'to'", "'endfor'", "'and'", "'or'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BEGIN", "END", "INT", "FLOAT", 
                      "STRING", "INPUT", "OUTPUT", "IF", "THEN", "ELSE", 
                      "ENDIF", "WHILE", "DO", "ENDWHILE", "FOR", "TO", "ENDFOR", 
                      "AND", "OR", "NOT", "ID", "NUM", "WS" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_comandos = 2
    RULE_declaracao = 3
    RULE_comando = 4
    RULE_atribuicao = 5
    RULE_entrada = 6
    RULE_saida = 7
    RULE_condicional = 8
    RULE_repeticao = 9
    RULE_expressao_aritmetica = 10
    RULE_expressao_multiplicativa = 11
    RULE_expressao_unaria = 12
    RULE_expressao_logica = 13
    RULE_operador_relacional = 14
    RULE_operador_logico = 15
    RULE_func = 16
    RULE_parametros = 17

    ruleNames =  [ "programa", "declaracoes", "comandos", "declaracao", 
                   "comando", "atribuicao", "entrada", "saida", "condicional", 
                   "repeticao", "expressao_aritmetica", "expressao_multiplicativa", 
                   "expressao_unaria", "expressao_logica", "operador_relacional", 
                   "operador_logico", "func", "parametros" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    BEGIN=18
    END=19
    INT=20
    FLOAT=21
    STRING=22
    INPUT=23
    OUTPUT=24
    IF=25
    THEN=26
    ELSE=27
    ENDIF=28
    WHILE=29
    DO=30
    ENDWHILE=31
    FOR=32
    TO=33
    ENDFOR=34
    AND=35
    OR=36
    NOT=37
    ID=38
    NUM=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(CompiladorParser.BEGIN, 0)

        def declaracoes(self):
            return self.getTypedRuleContext(CompiladorParser.DeclaracoesContext,0)


        def comandos(self):
            return self.getTypedRuleContext(CompiladorParser.ComandosContext,0)


        def END(self):
            return self.getToken(CompiladorParser.END, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = CompiladorParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(CompiladorParser.BEGIN)
            self.state = 37
            self.declaracoes()
            self.state = 38
            self.comandos()
            self.state = 39
            self.match(CompiladorParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.DeclaracaoContext,i)


        def getRuleIndex(self):
            return CompiladorParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = CompiladorParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self.declaracao()
                self.state = 44 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.ComandoContext,i)


        def getRuleIndex(self):
            return CompiladorParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)




    def comandos(self):

        localctx = CompiladorParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comandos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self.comando()
                self.state = 49 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 279768465408) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CompiladorParser.ID)
            else:
                return self.getToken(CompiladorParser.ID, i)

        def INT(self):
            return self.getToken(CompiladorParser.INT, 0)

        def FLOAT(self):
            return self.getToken(CompiladorParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(CompiladorParser.STRING, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = CompiladorParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 52
            self.match(CompiladorParser.ID)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 53
                self.match(CompiladorParser.T__0)
                self.state = 54
                self.match(CompiladorParser.ID)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(CompiladorParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribuicao(self):
            return self.getTypedRuleContext(CompiladorParser.AtribuicaoContext,0)


        def entrada(self):
            return self.getTypedRuleContext(CompiladorParser.EntradaContext,0)


        def saida(self):
            return self.getTypedRuleContext(CompiladorParser.SaidaContext,0)


        def condicional(self):
            return self.getTypedRuleContext(CompiladorParser.CondicionalContext,0)


        def repeticao(self):
            return self.getTypedRuleContext(CompiladorParser.RepeticaoContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = CompiladorParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comando)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.atribuicao()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.entrada()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.saida()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.condicional()
                pass
            elif token in [29, 32]:
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.repeticao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def expressao_aritmetica(self):
            return self.getTypedRuleContext(CompiladorParser.Expressao_aritmeticaContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)




    def atribuicao(self):

        localctx = CompiladorParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(CompiladorParser.ID)
            self.state = 70
            self.match(CompiladorParser.T__2)
            self.state = 71
            self.expressao_aritmetica(0)
            self.state = 72
            self.match(CompiladorParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntradaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(CompiladorParser.INPUT, 0)

        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_entrada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntrada" ):
                listener.enterEntrada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntrada" ):
                listener.exitEntrada(self)




    def entrada(self):

        localctx = CompiladorParser.EntradaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_entrada)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(CompiladorParser.INPUT)
            self.state = 75
            self.match(CompiladorParser.T__3)
            self.state = 76
            self.match(CompiladorParser.ID)
            self.state = 77
            self.match(CompiladorParser.T__4)
            self.state = 78
            self.match(CompiladorParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaidaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTPUT(self):
            return self.getToken(CompiladorParser.OUTPUT, 0)

        def expressao_aritmetica(self):
            return self.getTypedRuleContext(CompiladorParser.Expressao_aritmeticaContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_saida

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaida" ):
                listener.enterSaida(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaida" ):
                listener.exitSaida(self)




    def saida(self):

        localctx = CompiladorParser.SaidaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_saida)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(CompiladorParser.OUTPUT)
            self.state = 81
            self.match(CompiladorParser.T__3)
            self.state = 82
            self.expressao_aritmetica(0)
            self.state = 83
            self.match(CompiladorParser.T__4)
            self.state = 84
            self.match(CompiladorParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CompiladorParser.IF, 0)

        def expressao_logica(self):
            return self.getTypedRuleContext(CompiladorParser.Expressao_logicaContext,0)


        def THEN(self):
            return self.getToken(CompiladorParser.THEN, 0)

        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.ComandosContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.ComandosContext,i)


        def ENDIF(self):
            return self.getToken(CompiladorParser.ENDIF, 0)

        def ELSE(self):
            return self.getToken(CompiladorParser.ELSE, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)




    def condicional(self):

        localctx = CompiladorParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(CompiladorParser.IF)
            self.state = 87
            self.expressao_logica(0)
            self.state = 88
            self.match(CompiladorParser.THEN)
            self.state = 89
            self.comandos()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 90
                self.match(CompiladorParser.ELSE)
                self.state = 91
                self.comandos()


            self.state = 94
            self.match(CompiladorParser.ENDIF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(CompiladorParser.WHILE, 0)

        def expressao_logica(self):
            return self.getTypedRuleContext(CompiladorParser.Expressao_logicaContext,0)


        def DO(self):
            return self.getToken(CompiladorParser.DO, 0)

        def comandos(self):
            return self.getTypedRuleContext(CompiladorParser.ComandosContext,0)


        def ENDWHILE(self):
            return self.getToken(CompiladorParser.ENDWHILE, 0)

        def FOR(self):
            return self.getToken(CompiladorParser.FOR, 0)

        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def expressao_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.Expressao_aritmeticaContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.Expressao_aritmeticaContext,i)


        def TO(self):
            return self.getToken(CompiladorParser.TO, 0)

        def ENDFOR(self):
            return self.getToken(CompiladorParser.ENDFOR, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_repeticao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeticao" ):
                listener.enterRepeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeticao" ):
                listener.exitRepeticao(self)




    def repeticao(self):

        localctx = CompiladorParser.RepeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_repeticao)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(CompiladorParser.WHILE)
                self.state = 97
                self.expressao_logica(0)
                self.state = 98
                self.match(CompiladorParser.DO)
                self.state = 99
                self.comandos()
                self.state = 100
                self.match(CompiladorParser.ENDWHILE)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(CompiladorParser.FOR)
                self.state = 103
                self.match(CompiladorParser.ID)
                self.state = 104
                self.match(CompiladorParser.T__2)
                self.state = 105
                self.expressao_aritmetica(0)
                self.state = 106
                self.match(CompiladorParser.TO)
                self.state = 107
                self.expressao_aritmetica(0)
                self.state = 108
                self.match(CompiladorParser.DO)
                self.state = 109
                self.comandos()
                self.state = 110
                self.match(CompiladorParser.ENDFOR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_aritmeticaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_multiplicativa(self):
            return self.getTypedRuleContext(CompiladorParser.Expressao_multiplicativaContext,0)


        def expressao_aritmetica(self):
            return self.getTypedRuleContext(CompiladorParser.Expressao_aritmeticaContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_expressao_aritmetica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_aritmetica" ):
                listener.enterExpressao_aritmetica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_aritmetica" ):
                listener.exitExpressao_aritmetica(self)



    def expressao_aritmetica(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CompiladorParser.Expressao_aritmeticaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expressao_aritmetica, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.expressao_multiplicativa(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 123
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = CompiladorParser.Expressao_aritmeticaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao_aritmetica)
                        self.state = 117
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 118
                        self.match(CompiladorParser.T__5)
                        self.state = 119
                        self.expressao_multiplicativa(0)
                        pass

                    elif la_ == 2:
                        localctx = CompiladorParser.Expressao_aritmeticaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao_aritmetica)
                        self.state = 120
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 121
                        self.match(CompiladorParser.T__6)
                        self.state = 122
                        self.expressao_multiplicativa(0)
                        pass

             
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expressao_multiplicativaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_unaria(self):
            return self.getTypedRuleContext(CompiladorParser.Expressao_unariaContext,0)


        def expressao_multiplicativa(self):
            return self.getTypedRuleContext(CompiladorParser.Expressao_multiplicativaContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_expressao_multiplicativa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_multiplicativa" ):
                listener.enterExpressao_multiplicativa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_multiplicativa" ):
                listener.exitExpressao_multiplicativa(self)



    def expressao_multiplicativa(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CompiladorParser.Expressao_multiplicativaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expressao_multiplicativa, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.expressao_unaria()
            self._ctx.stop = self._input.LT(-1)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 137
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = CompiladorParser.Expressao_multiplicativaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao_multiplicativa)
                        self.state = 131
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 132
                        self.match(CompiladorParser.T__7)
                        self.state = 133
                        self.expressao_unaria()
                        pass

                    elif la_ == 2:
                        localctx = CompiladorParser.Expressao_multiplicativaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao_multiplicativa)
                        self.state = 134
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 135
                        self.match(CompiladorParser.T__8)
                        self.state = 136
                        self.expressao_unaria()
                        pass

             
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expressao_unariaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_aritmetica(self):
            return self.getTypedRuleContext(CompiladorParser.Expressao_aritmeticaContext,0)


        def NUM(self):
            return self.getToken(CompiladorParser.NUM, 0)

        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_expressao_unaria

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_unaria" ):
                listener.enterExpressao_unaria(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_unaria" ):
                listener.exitExpressao_unaria(self)




    def expressao_unaria(self):

        localctx = CompiladorParser.Expressao_unariaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expressao_unaria)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(CompiladorParser.T__3)
                self.state = 143
                self.expressao_aritmetica(0)
                self.state = 144
                self.match(CompiladorParser.T__4)
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(CompiladorParser.NUM)
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.match(CompiladorParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_logicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.Expressao_aritmeticaContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.Expressao_aritmeticaContext,i)


        def operador_relacional(self):
            return self.getTypedRuleContext(CompiladorParser.Operador_relacionalContext,0)


        def expressao_logica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.Expressao_logicaContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.Expressao_logicaContext,i)


        def operador_logico(self):
            return self.getTypedRuleContext(CompiladorParser.Operador_logicoContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_expressao_logica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_logica" ):
                listener.enterExpressao_logica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_logica" ):
                listener.exitExpressao_logica(self)


